[package]
name = "tamago"
version = "0.1.0"
authors = ["AstarGames"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["access_control", "reentrancy_guard", "psp34"] }


# RMRK
rmrk_catalog = { path = "../../crates/catalog", default-features = false  }
rmrk = { path = "../../crates/rmrk", default-features = false  }

[lib]
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "rmrk_catalog/std",
]
ink-as-dependency = []
